--- a/styles/main.css
+++ b/styles/main.css
@@ -1,14 +1,434 @@
-h1 {
+html,
+body,
+ul,
+li,
+h1,
+h2,
+h3,
+input,
+textarea {
+  margin: 0;
+  padding: 0;
+  border-width: 0;
   font-family: "Roboto", sans-serif;
-  font-weight: 400; }
+  font-size: 16px;
+  line-height: 27px; }
 
-@font-face {
-  font-family: "Roboto";
-  src: url("../fonts/Roboto-Regular-webfont.woff") format("woff");
-  font-weight: normal;
-  font-style: normal; }
+a {
+  color: #0075ff;
+  text-decoration: none; }
 
-body {
-  background: #eee; }
+.header {
+  height: 700px;
+  background-image: url("../images/header_new.svg");
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  font-weight: bold;
+  line-height: 16px; }
+
+.header__name {
+  position: absolute;
+  top: 314px;
+  left: 120px;
+  bottom: 165px;
+  font-size: 60px;
+  line-height: 60px;
+  letter-spacing: -1.5px;
+  color: white; }
+
+.header__name::before {
+  content: "";
+  display: block;
+  width: 35px;
+  height: 2px;
+  border-radius: 2px;
+  background: white;
+  margin-bottom: 16px; }
+
+.header__nav {
+  position: absolute;
+  bottom: 48px;
+  left: 0;
+  right: 0; }
+
+.header__top {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  top: 24px;
+  color: white; }
+
+.header__phone {
+  margin-left: 120px; }
+
+.header__action {
+  margin-right: 120px; }
+
+.header__phone,
+.header__action {
+  position: relative;
+  top: 32px; }
+
+.header__link {
+  color: white;
+  text-decoration: none;
+  border-bottom: 1px solid white;
+  -webkit-transition: color 0.2s;
+  transition: color 0.2s;
+  text-transform: uppercase; }
+
+.header__link:hover {
+  color: #9fadc2; }
+
+@media screen and (max-width: 999px) {
+  .header__top {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column; } }
+
+nav {
+  color: white;
+  text-transform: uppercase; }
+
+.nav__list {
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 0 70px; }
+
+.nav__item {
+  padding: 8px 24px;
+  margin: 0 26px; }
+
+.nav__item_active {
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 8px; }
+
+.nav__link {
+  color: white;
+  text-decoration: none;
+  -webkit-transition: color 0.2s;
+  transition: color 0.2s; }
+
+.nav__link:hover {
+  color: #9fadc2; }
+
+@media screen and (max-width: 999px) {
+  .nav__list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center; } }
+
+.logo {
+  width: 115px;
+  height: 76px;
+  background-image: url("../images/logo.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center; }
+
+.section {
+  padding: 104px calc(50% - 510px);
+  position: relative;
+  background: white; }
+
+.section__heading {
+  left: 0;
+  right: 0;
+  top: -0.5em;
+  margin: auto; }
+
+@media screen and (max-width: 999px) {
+  .section {
+    padding-left: 20px;
+    padding-right: 20px; } }
+
+.info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between; }
+
+.info__heading {
+  width: 328px;
+  font-weight: bold;
+  font-size: 48px;
+  line-height: 48px;
+  letter-spacing: -1.5px; }
+
+.info__text {
+  max-width: 500px; }
+
+.info__small_heding {
+  color: #0075ff;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 30px;
+  margin-bottom: 16px; }
+
+@media screen and (max-width: 999px) {
+  .info {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column; }
+  .info__heading {
+    margin-bottom: 48px; } }
+
+.heading {
+  font-size: 48px;
+  line-height: 48px;
+  position: absolute;
+  text-transform: uppercase;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content; }
+
+.heading__crown {
+  display: block;
+  position: absolute;
+  left: 0;
+  right: 0;
+  width: 23px;
+  height: 16px;
+  top: calc(100% + 7px);
+  margin: auto;
+  background-image: url(../images/crown.svg);
+  background-repeat: no-repeat; }
+
+.photos {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between; }
+
+.photos__img {
+  width: calc(50% - 10px);
+  height: 256px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+  border-radius: 8px; }
+
+.photos_wide_left .photos__img:first-child {
+  width: calc(67% - 10px); }
+
+.photos_wide_left .photos__img:last-child {
+  width: calc(33% - 10px); }
+
+.photos_wide_right .photos__img:first-child {
+  width: calc(33% - 10px); }
+
+.photos_wide_right .photos__img:last-child {
+  width: calc(67% - 10px); }
+
+@media screen and (max-width: 999px) {
+  .photos__img {
+    height: 131px; } }
+
+.gallery__caption {
+  margin: 24px 0 40px; }
+
+.gallery__button {
+  margin: 40px auto 0; }
+
+.button {
+  display: block;
+  line-height: 14px;
+  font-weight: bold;
+  color: #0075ff;
+  background-color: white;
+  cursor: pointer;
+  padding: 21px 66px;
+  border-radius: 8px;
+  border: 2px solid #0075ff;
+  -webkit-transition: background-color 0.2s;
+  transition: background-color 0.2s; }
+
+.button:hover {
+  color: white;
+  background-color: #0075ff; }
+
+.link {
+  font-weight: bold;
+  -webkit-transition: color 0.2s;
+  transition: color 0.2s; }
+
+.link:hover {
+  color: #0200ff; }
+
+.consultation {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between; }
+
+.consultation__heading {
+  font-size: 24px;
+  line-height: 30px;
+  color: #0075ff;
+  margin-bottom: 16px; }
+
+.consultation__form {
+  width: 413px; }
+
+.consultation__text {
+  width: 412px; }
+
+@media screen and (max-width: 999px) {
+  .consultation {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column; }
+  .consultation__form,
+  .consultation__text {
+    width: 100%; } }
+
+.form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column; }
+
+.form__item {
+  margin-bottom: 16px; }
+
+.form__input,
+.form__button {
+  width: 100%; }
+
+.input {
+  font-size: 14px;
+  line-height: 14px;
+  padding: 17px;
+  background-color: #f7f8ff;
+  border: 1px solid #fff;
+  border-radius: 8px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box; }
+
+.input::-webkit-input-placeholder {
+  color: #b9c1ce; }
+
+.input::-moz-placeholder {
+  color: #b9c1ce; }
+
+.input:-ms-input-placeholder {
+  color: #b9c1ce; }
+
+.input::-ms-input-placeholder {
+  color: #b9c1ce; }
+
+.input::placeholder {
+  color: #b9c1ce; }
+
+.input__textarea {
+  height: 144px; }
+
+.testimonials {
+  display: grid;
+  grid-template-columns: repeat(3, 240px);
+  grid-gap: 150px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
+
+@media screen and (max-width: 999px) {
+  .testimonials {
+    grid-template-columns: 280px; } }
+
+.person {
+  text-align: center; }
+
+.person__name {
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 30px;
+  color: #0075ff;
+  margin: 28px auto 4px; }
+
+.person__position {
+  font-size: 14px;
+  color: #9fadc2;
+  margin: 0; }
+
+.person__text {
+  color: #3e3e3e; }
+
+.contact {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between; }
+
+.contact__text {
+  display: grid;
+  grid-template-columns: repeat(2, 152px);
+  grid-template-rows: repeat(4, 27px);
+  grid-auto-flow: column;
+  grid-gap: 0 108px;
+  color: #3e3e3e;
+  width: 152px; }
+
+.contact__names {
+  font-size: 14px;
+  color: #9fadc2;
+  margin-bottom: 8px; }
+
+.contact__form {
+  width: 413px; }
+
+/*@media screen and (max-width: $small-screen-breack-point) {
+  .contacts {
+    flex-direction: column;
+  }
+
+  .contact__text {
+    display: flex;
+  }
+}*/
+.footer {
+  height: 359px;
+  position: -webkit-sticky;
+  position: sticky;
+  bottom: 0;
+  z-index: -1;
+  background-image: url("../images/footer_new.jpg");
+  background-size: cover;
+  background-position: center; }
+
+.footer__logo {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 40px;
+  margin: 0 auto; }
 
 /*# sourceMappingURL=main.css.map */
