--- a/styles/contact.css
+++ b/styles/contact.css
@@ -5,23 +5,22 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between; }
-
-.contact__text {
-  display: grid;
-  grid-template-columns: repeat(2, 152px);
-  grid-template-rows: repeat(4, 27px);
-  grid-auto-flow: column;
-  grid-gap: 0 108px;
-  color: #3e3e3e;
-  width: 152px; }
-
-.contact__names {
-  font-size: 14px;
-  color: #9fadc2;
-  margin-bottom: 8px; }
-
-.contact__form {
-  width: 413px; }
+  .contact__text {
+    display: grid;
+    grid-template-columns: repeat(2, 152px);
+    grid-template-rows: repeat(4, 27px);
+    grid-auto-flow: column;
+    grid-gap: 0 108px;
+    color: #3e3e3e;
+    width: 152px; }
+  .contact__names {
+    font-size: 14px;
+    color: #9fadc2;
+    margin-bottom: 8px; }
+  .contact__form {
+    width: 413px; }
+  .contact__link {
+    color: #3e3e3e; }
 
 /*@media screen and (max-width: $small-screen-breack-point) {
   .contacts {
