--- a/styles/logo.css
+++ b/styles/logo.css
@@ -5,5 +5,9 @@
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center; }
+  @media screen and (max-width: 768px) {
+    .logo {
+      width: 73px;
+      height: 48px; } }
 
 /*# sourceMappingURL=logo.css.map */
