--- a/styles/section.css
+++ b/styles/section.css
@@ -1,5 +1,5 @@
 .section {
-  padding: 104px calc(50% - 510px);
+  padding: 100px calc(50% - 510px);
   position: relative;
   background: white; }
   .section__heading {
@@ -7,14 +7,11 @@
     right: 0;
     top: -0.5em;
     margin: auto; }
+  @media screen and (max-width: 1080px) {
+    .section {
+      padding: 64px 20px; } }
   @media screen and (max-width: 768px) {
     .section {
-      padding-top: 64px;
-      padding-left: 20px;
-      padding-right: 20px; } }
-  @media screen and (max-width: 500px) {
-    .section__heading {
-      font-size: 36px;
-      line-height: 36px; } }
+      padding: 64px 20px; } }
 
 /*# sourceMappingURL=section.css.map */
