--- a/styles/contact.css
+++ b/styles/contact.css
@@ -6,30 +6,35 @@
       -ms-flex-pack: justify;
           justify-content: space-between; }
   .contact__text {
-    display: grid;
-    grid-template-columns: repeat(2, 152px);
-    grid-template-rows: repeat(4, 27px);
-    grid-auto-flow: column;
-    grid-gap: 0 108px;
+    margin: 0 54px;
     color: #3e3e3e;
-    width: 152px; }
+    max-width: 413px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
+  .contact__info {
+    margin-right: 108px; }
   .contact__names {
     font-size: 14px;
     color: #9fadc2;
     margin-bottom: 8px; }
   .contact__form {
-    width: 413px; }
+    width: 100%; }
   .contact__link {
     color: #3e3e3e; }
-
-/*@media screen and (max-width: $small-screen-breack-point) {
-  .contacts {
-    flex-direction: column;
-  }
-
-  .contact__text {
-    display: flex;
-  }
-}*/
+  @media screen and (max-width: 768px) {
+    .contact {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column; }
+    .contact__text {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      margin-left: 0; }
+    .contact__info {
+      margin: 0; } }
 
 /*# sourceMappingURL=contact.css.map */
