--- a/styles/main.css
+++ b/styles/main.css
@@ -28,9 +28,8 @@ a {
   line-height: 16px; }
   .header__name {
     position: absolute;
-    top: 314px;
     left: 120px;
-    bottom: 165px;
+    top: 396px;
     font-size: 60px;
     line-height: 60px;
     letter-spacing: -1.5px;
@@ -57,7 +56,8 @@ a {
         -ms-flex-pack: justify;
             justify-content: space-between;
     top: 24px;
-    color: white; }
+    color: white;
+    width: 100%; }
   .header__phone {
     margin-left: 120px; }
   .header__action {
@@ -74,18 +74,53 @@ a {
     text-transform: uppercase; }
   .header__link:hover {
     color: #9fadc2; }
-  @media screen and (max-width: 768px) {
-    .header__phone, .header__action {
-      display: none; }
+  .header__toggler {
+    display: none; }
+  @media screen and (max-width: 1080px) {
     .header__name {
-      position: relative;
+      position: absolute;
       left: 20px;
-      bottom: 80px; } }
+      top: 389px;
+      font-size: 46px;
+      line-height: 40px;
+      letter-spacing: -1px; } }
+  @media screen and (max-width: 768px) {
+    .header {
+      height: 580px; }
+    .header__action {
+      display: none; }
+    .header__top {
+      -webkit-box-pack: justify;
+          -ms-flex-pack: justify;
+              justify-content: space-between; }
+    .header__phone {
+      width: 18px;
+      height: 18px;
+      background-image: url(../images/phone.svg);
+      margin: 0;
+      position: relative;
+      top: 10px;
+      left: 23px;
+      cursor: pointer; }
+    .header__toggler-label {
+      width: 18px;
+      height: 12px;
+      background-image: url("../images/lines.svg");
+      display: inline-block;
+      position: absolute;
+      right: 23px;
+      top: 41px;
+      cursor: pointer; }
+    .header .phone__link {
+      display: none; } }
 
-nav {
+.phone__link {
+  color: white; }
+
+.nav {
   color: white;
   text-transform: uppercase; }
-  nav__list {
+  .nav__list {
     list-style: none;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -93,17 +128,17 @@ nav {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center; }
-  nav__item {
+  .nav__item {
     padding: 8px 24px;
     margin: 0 26px; }
-  nav__item_active {
+  .nav__item_active {
     background-color: rgba(255, 255, 255, 0.1);
     border-radius: 8px;
     font-weight: bold;
     font-size: 12px;
     line-height: 16px;
     letter-spacing: 2px; }
-  nav__link {
+  .nav__link {
     color: white;
     text-decoration: none;
     -webkit-transition: color 0.2s;
@@ -112,10 +147,19 @@ nav {
     font-size: 12px;
     line-height: 16px;
     letter-spacing: 2px; }
-  nav__link:hover {
+  .nav__link:hover {
     color: #9fadc2; }
+  @media screen and (max-width: 1080px) {
+    .nav__list {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center; } }
   @media screen and (max-width: 768px) {
-    nav__list {
+    .nav__list {
       display: none; } }
 
 .logo {
@@ -128,10 +172,11 @@ nav {
   @media screen and (max-width: 768px) {
     .logo {
       width: 73px;
-      height: 48px; } }
+      height: 48px;
+      margin: 0 auto; } }
 
 .section {
-  padding: 104px calc(50% - 510px);
+  padding: 100px calc(50% - 510px);
   position: relative;
   background: white; }
   .section__heading {
@@ -139,15 +184,12 @@ nav {
     right: 0;
     top: -0.5em;
     margin: auto; }
+  @media screen and (max-width: 1080px) {
+    .section {
+      padding: 64px 20px; } }
   @media screen and (max-width: 768px) {
     .section {
-      padding-top: 64px;
-      padding-left: 20px;
-      padding-right: 20px; } }
-  @media screen and (max-width: 500px) {
-    .section__heading {
-      font-size: 36px;
-      line-height: 36px; } }
+      padding: 64px 20px; } }
 
 .info {
   display: -webkit-box;
@@ -170,14 +212,16 @@ nav {
     font-size: 24px;
     line-height: 30px;
     margin-bottom: 16px; }
-  @media screen and (max-width: 999px) {
+  @media screen and (max-width: 768px) {
     .info {
       -webkit-box-orient: vertical;
       -webkit-box-direction: normal;
           -ms-flex-direction: column;
               flex-direction: column; }
     .info__heading {
-      margin-bottom: 48px; } }
+      margin-bottom: 48px;
+      font-size: 36px;
+      line-height: 36px; } }
 
 .heading {
   font-size: 48px;
@@ -198,6 +242,12 @@ nav {
     margin: auto;
     background-image: url(../images/crown.svg);
     background-repeat: no-repeat; }
+  @media screen and (max-width: 768px) {
+    .heading {
+      font-size: 36px;
+      line-height: 36px; }
+    .heading__crown {
+      margin: 0 auto 30px; } }
 
 .photos {
   display: -webkit-box;
@@ -214,22 +264,35 @@ nav {
     -o-object-position: center;
        object-position: center;
     border-radius: 8px; }
-  .photos_wide_left__img:first-child {
+  .photos__wide_left .photos__img:first-child {
     width: calc(67% - 10px); }
-  .photos_wide_left__img:last-child {
+  .photos__wide_left .photos__img:last-child {
     width: calc(33% - 10px); }
-  .photos__wide_right__img:first-child {
+  .photos__wide_right .photos__img:first-child {
     width: calc(33% - 10px); }
-  .photos__wide_right__img:last-child {
+  .photos__wide_right .photos__img:last-child {
     width: calc(67% - 10px); }
-  @media screen and (max-width: 999px) {
+  @media screen and (max-width: 768px) {
     .photos__img {
-      height: 131px; } }
+      height: 131px;
+      min-width: 129px; }
+    .photos__wide_left .photos__img:first-child {
+      width: calc(50% - 10px); }
+    .photos__wide_left .photos__img:last-child {
+      width: calc(50% - 10px); }
+    .photos__wide_right .photos__img:first-child {
+      width: calc(50% - 10px); }
+    .photos__wide_right .photos__img:last-child {
+      width: calc(50% - 10px); } }
 
 .gallery__caption {
   margin: 24px 0 40px; }
-  .gallery__caption__button {
-    margin: 40px auto 0; }
+
+.gallery__button {
+  margin: 40px auto 0; }
+  @media screen and (max-width: 768px) {
+    .gallery__button {
+      width: 280px; } }
 
 .button {
   display: block;
@@ -270,7 +333,7 @@ nav {
     width: 413px; }
   .consultation__text {
     width: 412px; }
-  @media screen and (max-width: 999px) {
+  @media screen and (max-width: 768px) {
     .consultation {
       -webkit-box-orient: vertical;
       -webkit-box-direction: normal;
@@ -321,9 +384,13 @@ nav {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center; }
-  @media screen and (max-width: 999px) {
+  @media screen and (max-width: 1080px) {
     .testimonials {
-      grid-template-columns: 280px; } }
+      grid-gap: 48px; } }
+  @media screen and (max-width: 768px) {
+    .testimonials {
+      grid-template-columns: 280px;
+      grid-gap: 48px; } }
 
 .person {
   text-align: center; }
@@ -348,31 +415,37 @@ nav {
       -ms-flex-pack: justify;
           justify-content: space-between; }
   .contact__text {
-    display: grid;
-    grid-template-columns: repeat(2, 152px);
-    grid-template-rows: repeat(4, 27px);
-    grid-auto-flow: column;
-    grid-gap: 0 108px;
+    margin: 0 54px;
     color: #3e3e3e;
-    width: 152px; }
+    max-width: 413px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
+  .contact__info {
+    margin-right: 108px; }
   .contact__names {
     font-size: 14px;
     color: #9fadc2;
     margin-bottom: 8px; }
   .contact__form {
-    width: 413px; }
+    width: 100%; }
   .contact__link {
     color: #3e3e3e; }
+  @media screen and (max-width: 768px) {
+    .contact {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column; }
+    .contact__text {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      margin-left: 0; }
+    .contact__info {
+      margin: 0; } }
 
-/*@media screen and (max-width: $small-screen-breack-point) {
-  .contacts {
-    flex-direction: column;
-  }
-
-  .contact__text {
-    display: flex;
-  }
-}*/
 .footer {
   height: 359px;
   position: -webkit-sticky;
@@ -388,5 +461,8 @@ nav {
     right: 0;
     bottom: 40px;
     margin: 0 auto; }
+  @media screen and (max-width: 768px) {
+    .footer {
+      height: 206px; } }
 
 /*# sourceMappingURL=main.css.map */
