--- a/styles/nav.css
+++ b/styles/nav.css
@@ -1,7 +1,7 @@
-nav {
+.nav {
   color: white;
   text-transform: uppercase; }
-  nav__list {
+  .nav__list {
     list-style: none;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -9,17 +9,17 @@ nav {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center; }
-  nav__item {
+  .nav__item {
     padding: 8px 24px;
     margin: 0 26px; }
-  nav__item_active {
+  .nav__item_active {
     background-color: rgba(255, 255, 255, 0.1);
     border-radius: 8px;
     font-weight: bold;
     font-size: 12px;
     line-height: 16px;
     letter-spacing: 2px; }
-  nav__link {
+  .nav__link {
     color: white;
     text-decoration: none;
     -webkit-transition: color 0.2s;
@@ -28,10 +28,19 @@ nav {
     font-size: 12px;
     line-height: 16px;
     letter-spacing: 2px; }
-  nav__link:hover {
+  .nav__link:hover {
     color: #9fadc2; }
+  @media screen and (max-width: 1080px) {
+    .nav__list {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center; } }
   @media screen and (max-width: 768px) {
-    nav__list {
+    .nav__list {
       display: none; } }
 
 /*# sourceMappingURL=nav.css.map */
