--- a/styles/photos.css
+++ b/styles/photos.css
@@ -13,16 +13,25 @@
     -o-object-position: center;
        object-position: center;
     border-radius: 8px; }
-  .photos_wide_left__img:first-child {
+  .photos__wide_left .photos__img:first-child {
     width: calc(67% - 10px); }
-  .photos_wide_left__img:last-child {
+  .photos__wide_left .photos__img:last-child {
     width: calc(33% - 10px); }
-  .photos__wide_right__img:first-child {
+  .photos__wide_right .photos__img:first-child {
     width: calc(33% - 10px); }
-  .photos__wide_right__img:last-child {
+  .photos__wide_right .photos__img:last-child {
     width: calc(67% - 10px); }
-  @media screen and (max-width: 999px) {
+  @media screen and (max-width: 768px) {
     .photos__img {
-      height: 131px; } }
+      height: 131px;
+      min-width: 129px; }
+    .photos__wide_left .photos__img:first-child {
+      width: calc(50% - 10px); }
+    .photos__wide_left .photos__img:last-child {
+      width: calc(50% - 10px); }
+    .photos__wide_right .photos__img:first-child {
+      width: calc(50% - 10px); }
+    .photos__wide_right .photos__img:last-child {
+      width: calc(50% - 10px); } }
 
 /*# sourceMappingURL=photos.css.map */
