--- a/styles/nav.css
+++ b/styles/nav.css
@@ -9,15 +9,20 @@
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center; }
+  .nav__list_mobile {
+    list-style: none; }
   .nav__item {
     padding: 8px 24px;
     margin: 0 26px; }
+  .nav__item_mobile {
+    padding-left: 21px;
+    margin-bottom: 16px;
+    max-width: 160px; }
   .nav__item_active {
     background-color: rgba(255, 255, 255, 0.1);
     border-radius: 8px;
     font-weight: bold;
     font-size: 12px;
-    line-height: 16px;
     letter-spacing: 2px; }
   .nav__link {
     color: white;
@@ -30,6 +35,14 @@
     letter-spacing: 2px; }
   .nav__link:hover {
     color: #9fadc2; }
+  .nav__link_mobile {
+    font-size: 22px;
+    line-height: 22px;
+    letter-spacing: 2px;
+    color: white; }
+  .nav__mobile {
+    display: none;
+    color: white; }
   @media screen and (max-width: 1080px) {
     .nav__list {
       -webkit-box-orient: vertical;
