--- a/styles/button.css
+++ b/styles/button.css
@@ -10,8 +10,7 @@
   border-radius: 8px;
   border: 2px solid #0075ff;
   -webkit-transition: background-color 0.2s;
-  transition: background-color 0.2s;
-  outline-color: goldenrod; }
+  transition: background-color 0.2s; }
   .button:hover {
     color: white;
     background-color: #0075ff;
